# ai-recommend

./: .env.example  .gitignore  Dockerfile.consumer  Dockerfile.producer  README.md  code_quality_maintenance.sh  config.yaml  docker-compose.yaml  otel-collector-config.yaml  prometheus.yml  pyproject.toml
.deploy/scripts/: 0001_schema.sql  0002_data.sql  README.md
ai_recommend/: container.py  main.py  main_surreal.py
ai_recommend/adapter/input/e_commerce/: e_commerce_events_consumer.py
ai_recommend/adapter/input/ecomerce/: e_commerce_events_consumer.py
ai_recommend/adapter/output/e_commerce/: e_commerce_events_producer.py
ai_recommend/adapter/output/ecomerce/: e_commerce_events_producer.py
ai_recommend/adapter/output/repository/: user_product_repository.py
ai_recommend/adapter/stub/: e_commerce_events_pb2.py
ai_recommend/ai/: agent.py  container.py
ai_recommend/api/: endpoint.py  endpoints.py
ai_recommend/cmd/consumer/: config.yaml  containers.py  main.py
ai_recommend/cmd/producer/: config.yaml  containers.py  main.py
ai_recommend/cmd/rest_api/: __init__.py
ai_recommend/cmd/web_api/: application.py
ai_recommend/domain/entity/: product.py  product_category.py  user.py  viewed_product.py
ai_recommend/domain/models/: __init__.py
ai_recommend/infrastructure/db/: config.py  container.py  postgres_db.py  surreal_db.py
ai_recommend/infrastructure/kafka/: config.py
ai_recommend/infrastructure/observability/: config.py
ai_recommend/infrastructure/observability/logger/: config.py  di.py  logger.py  logger_wrap.py
ai_recommend/infrastructure/observability/logger/loguru/: loguru.py
ai_recommend/infrastructure/observability/meter/: meter.py
ai_recommend/infrastructure/observability/trace/: trace.py
ai_recommend/infrastructure/repository/: container.py  graph_repository.py
database/tibd-cluster/: tidb-cluster.yaml
database/tidb-cluster/: tidb-cluster.yaml
database/tidb-operator/: values.yaml
database/tikv/tikv-delete-keys/: Dockerfile  README.md  go.mod  main.go  pod.yaml
database/tikv/tikv-get-keys/: Dockerfile  README.md  main.go  pod.yaml
database/tikv/tikv-put-surreal-v2-keys/: Dockerfile  README.md  main.go  pod.yaml
docs/: ARCHITECTURE.md  KNOWLEDGE_GRAPH_RAG.md  QUICKSTART.md  RAG_TRANSFORMATION_SUMMARY.md
notebooks/: Demo.ipynb
schemas/: e-commerce-events.proto
static/: app_agent.html
users_api/: .gitignore  Cargo.toml  README.md  docker-compose.yaml
users_api/src/: main.rs
users_api/src/domain/: mod.rs  user_domain.rs
users_api/src/infrastructure/: error.rs  mod.rs  surrealdb.rs
users_api/src/models/: mod.rs  user_model.rs  user_repository.rs
users_api/src/models/adapters/: mod.rs  user_model_domain.rs
users_api/src/presentation/handlers/: user_handler.rs
users_api/src/presentation/routes/: user_routes.rs
users_api/src/services/: user_service.rs
