[project]
name = "ai-recommend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcelo Ortiz de Santana", email = "tentativafc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.1.0",
    "authlib>=1.6.0",
    "cachetools>=6.0.0",
    "confluent-kafka>=2.10.0",
    "dependency-injector>=4.46.0",
    "googleapis-common-protos>=1.70.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-proto>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
    "opentelemetry-semantic-conventions>=0.54b1",
    "protobuf>=5.29.4",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "surrealdb>=1.0.4",
]

[project.scripts]
ai-recommend = "ai_recommend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "python-semantic-release>=9.21.1",
    "grpcio-tools>=1.71",
    "protobuf>=5.26.1",
    "ruff>=0.11.11",
]

[tool.hatch.build.targets.wheel]
packages = ["ai_recommend"]

[tool.uv]
dev-dependencies = []


[tool.uv.sources]
commons = { workspace = true }
ingestor = { workspace = true }
rules-manager = { workspace = true }
intents-manager = { workspace = true }


[tool.ruff]
# Enable the linter
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle (Google style docstrings)
    "RUF", # Ruff-specific rules
]

# Google style configuration
lint.pydocstyle.convention = "google"

# Sort imports
lint.isort.known-first-party = ["commons"]

# Auto-fix behavior
lint.fixable = ["I", "F", "E", "UP"]
lint.unfixable = []

# Line length to match Google Style Guide
line-length = 80

# Exclude files and directories
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "venv",
    ".venv",
]

# Format settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

